--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "PLUGIN_NAME",
+  "name": "postcss-uniapp-tailwindcss",
   "version": "0.0.0",
-  "description": "PostCSS plugin PLUGIN_DESC",
+  "description": "PostCSS plugin use tailwindcss in uniapp",
   "keywords": [
     "postcss",
     "css",
-    "postcss-plugin"KEYWORDS
+    "postcss-plugin",
+    "tailwindcss",
+    "uniapp"
   ],
   "scripts": {
-    "test": "jest --coverage && eslint ."
+    "test": "jest --coverage && eslint .",
+    "build": "npx tailwindcss-cli build ./src/app.css -o ./dist/app.css",
+    "postcss": "postcss -o ./dist/app.css ./src/app.css"
   },
-  "author": "AUTHOR_NAME <AUTHOR_EMAIL>",
+  "author": "LinXueYi <695126622@qq.com>",
   "license": "MIT",
-  "repository": "GITHUB_NAME/PLUGIN_NAME",
+  "repository": "LinXueYi/postcss-uniapp-tailwindcss",
   "engines": {
     "node": ">=10.0.0"
   },
@@ -23,9 +27,11 @@
     "clean-publish": "^2.1.0",
     "eslint": "^7.21.0",
     "eslint-plugin-jest": "^24.2.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.8",
+    "postcss-cli": "^8.3.1",
     "simple-git-hooks": "^2.0.2"
   },
   "simple-git-hooks": {
@@ -57,5 +63,8 @@
         "statements": 100
       }
     }
+  },
+  "dependencies": {
+    "tailwindcss": "^2.1.2"
   }
 }
