--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
   "name": "postcss-uniapp-tailwindcss",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "PostCSS plugin use tailwindcss in uniapp",
-  "keywords": [
-    "postcss",
-    "css",
-    "postcss-plugin",
-    "tailwindcss",
-    "uniapp"
-  ],
+  "keywords": ["postcss", "css", "postcss-plugin", "tailwindcss", "uniapp"],
   "scripts": {
     "test": "jest --coverage && eslint .",
     "build": "npx tailwindcss-cli build ./src/app.css -o ./dist/app.css",
@@ -48,10 +42,7 @@
       "node": true,
       "es6": true
     },
-    "extends": [
-      "eslint:recommended",
-      "plugin:jest/recommended"
-    ],
+    "extends": ["eslint:recommended", "plugin:jest/recommended"],
     "rules": {
       "jest/expect-expect": "off"
     }
