--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --coverage && eslint .",
     "build": "npx tailwindcss-cli build ./src/app.css -o ./dist/app.css",
-    "postcss": "postcss -o ./dist/app.css ./src/app.css"
+    "postcss": "postcss  ./src/app.css -o ./dist/app.css"
   },
   "author": "LinXueYi <695126622@qq.com>",
   "license": "MIT",
@@ -21,7 +21,6 @@
     "clean-publish": "^2.1.0",
     "eslint": "^7.21.0",
     "eslint-plugin-jest": "^24.2.1",
-    "eslint-plugin-prettier": "^3.4.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.8",
