--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.8",
     "postcss-cli": "^8.3.1",
-    "simple-git-hooks": "^2.0.2"
+    "simple-git-hooks": "^2.0.2",
+    "tailwindcss": "^2.1.2"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
@@ -53,8 +54,5 @@
         "statements": 100
       }
     }
-  },
-  "dependencies": {
-    "tailwindcss": "^2.1.2"
   }
 }
